--- a/shared/components/Header/NavMobile/NavMobile.scss
+++ b/shared/components/Header/NavMobile/NavMobile.scss
@@ -67,3 +67,9 @@
     display: none;
   }
 }
+
+@include media-mobile {
+  .navMobile {
+  	padding-left: 0;
+  }
+}
